--- a/buildANE/android-ARM/res/layout/umeng_socialize_ucenter.xml
+++ b/buildANE/android-ARM/res/layout/umeng_socialize_ucenter.xml
@@ -1,23 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
      >
 
     <include
         android:id="@+id/umeng_socialize_title"
         layout="@layout/umeng_socialize_titile_bar" />
-    <ScrollView 
+    <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:fadingEdge="none"
         android:layout_below="@id/umeng_socialize_title"
+        android:fadingEdge="none"
         android:background="@color/umeng_socialize_ucenter_bg">
         <RelativeLayout 
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            >
-	<FrameLayout
+            android:layout_height="fill_parent">
+	 <FrameLayout
         android:id="@+id/umeng_socialize_load_error"
         android:layout_width="fill_parent"
         android:layout_height="158dp"
@@ -27,17 +26,17 @@
     <RelativeLayout
         android:id="@+id/umeng_socialize_ucenter_info"
         android:layout_width="fill_parent"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         android:layout_below="@id/umeng_socialize_load_error"
-        android:background="@color/umeng_socialize_list_item_bgcolor"
-        android:paddingTop="5dp"
-         >
+        android:background="#ffffff"
+        android:padding="8dp" >
+
         <ImageView
             android:id="@+id/umeng_socialize_ic"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="15dp"
             android:scaleType="fitXY"
-            android:layout_marginTop="20dp"
             android:layout_centerHorizontal="true"
             android:src="@drawable/umeng_socialize_default_avatar" />
 
@@ -45,46 +44,42 @@
             android:id="@+id/umeng_socialize_title_tv"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="5dp"
             android:gravity="center_vertical"
             android:text="登录账号"
             android:textColor="@color/umeng_socialize_list_item_textcolor"
             android:textSize="16sp"
-            android:layout_marginTop="15dp"
-            android:layout_marginLeft="5dp"
-            android:paddingLeft="8dp"
             android:textStyle="bold" />
 
         <RelativeLayout
             android:layout_width="fill_parent"
-            android:layout_height="85dp"
-            android:layout_centerVertical="true"
-            android:layout_marginBottom="13dp"
-            android:layout_marginTop="10dp"
+            android:layout_height="65dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="5dp"
             android:layout_below="@id/umeng_socialize_ic" >
 
             <TextView
                 android:id="@+id/umeng_socialize_loginNm"
-                android:layout_width="wrap_content"
-                android:layout_height="26dp"
+                android:layout_width="fill_parent"
+                android:layout_height="29.5dp"
                 android:layout_alignParentTop="true"
                 android:layout_marginTop="10dp"
-                android:ellipsize="end"
-                android:gravity="center_vertical"
+                android:gravity="center"
                 android:layout_centerHorizontal="true"
-                android:singleLine="true"
-                android:text="匿名用户"
+                android:text="星座运势新解"
                 android:textColor="@color/umeng_socialize_list_item_textcolor"
-                android:textSize="16sp"
+                android:textSize="18sp"
                 />
 
             <ViewFlipper
                 android:id="@+id/umeng_socialize_login_switch"
-                android:layout_width="fill_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="25dp"
-                android:autoStart="false"
                 android:layout_below="@id/umeng_socialize_loginNm"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="8dp"
+                android:autoStart="false"
                 android:paddingLeft="5dp" >
 
                 <Button
@@ -95,17 +90,16 @@
                     android:text="点击登录"
                     android:layout_gravity="center_horizontal"
                     android:background="@drawable/umeng_socialize_button_login"
-                    android:textSize="12sp" />
+                    android:textSize="13sp" />
 
                 <TextView
                     android:id="@+id/umeng_socialize_loginAddr"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
-                    android:ellipsize="end"
                     android:gravity="center"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
                     android:lines="2"
                     android:text="http://www.umeng.com/"
                     android:textColor="#333333"
@@ -117,9 +111,12 @@
     <RelativeLayout
         android:id="@+id/umeng_socialize_share_area"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@id/umeng_socialize_ucenter_info"
-        android:background="@color/umeng_socialize_ucenter_bg"
+        android:layout_marginBottom="12dp"
+        android:background="#EEEEEE"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
         android:paddingBottom="8dp"
          >
 
@@ -127,34 +124,32 @@
             android:id="@+id/umeng_socialize_share_tv"
             android:layout_width="fill_parent"
             android:layout_height="40dp"
-            android:layout_marginLeft="13dp"
             android:layout_alignParentTop="true"
+            android:layout_marginTop="8dp"
             android:gravity="center_vertical"
+            android:layout_marginLeft="5dp"
             android:text="分享设置"
             android:textColor="@color/umeng_socialize_list_item_textcolor"
-            android:textSize="18sp"
-             />
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
         <ScrollView
             android:id="@+id/umeng_xp_ScrollView"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_below="@id/umeng_socialize_share_tv"
             android:layout_gravity="center"
             android:layout_marginTop="5dp"
-            android:paddingLeft="8dp"
-            android:paddingRight="10dp"
-            android:visibility="gone"
             android:scrollbars="none" >
 			</ScrollView>
             <LinearLayout
                 android:id="@+id/umeng_socialize_share_config_area"
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:background="@color/umeng_socialize_ucenter_bg"
+                android:layout_height="wrap_content"
                 android:layout_below="@id/umeng_socialize_share_tv"
                 android:orientation="vertical" >
             </LinearLayout>
-   		  </RelativeLayout>
+    </RelativeLayout>            
         </RelativeLayout>
     </ScrollView>
 </RelativeLayout>
